EcomApp-6: product crud with firestore.
